# Phaedrus

./: README.md  forensic.db  main.py  pyproject.toml
src/forensic_framework/: __init__.py  config.py  main.py  ui.py
src/forensic_framework/ai_engine/: __init__.py  anomaly_detector.py  graph_analyzer.py  ollama_agent.py
src/forensic_framework/api/: __init__.py  routes_ingest.py  routes_query.py  routes_report.py  routes_verify.py
src/forensic_framework/explainability/: __init__.py  feature_importance.py  shap_engine.py
src/forensic_framework/ingestion/: __init__.py  drain_parser.py  preprocessor.py  schemas.py
src/forensic_framework/integrity/: __init__.py  logchain.py  merkle_tree.py  verifier.py
src/forensic_framework/reporting/: __init__.py  generator.py
src/forensic_framework/storage/: __init__.py  database.py  models.py
tests/: sample_logs.py  test_drain_parser.py  test_merkle_tree.py  test_shap_engine.py
