[project]
name = "forensic-framework"
version = "0.1.0"
description = "AI-powered forensic log investigation framework using Ollama and OSS tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Log Parsing
    "drain3>=0.9.11",
    
    # AI/ML
    "ollama>=0.3.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    
    # Graph Analysis
    "networkx>=3.2.0",
    "matplotlib>=3.8.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    
    # Reporting
    "jinja2>=3.1.0",
    
    # HTTP client
    "httpx>=0.25.0",
    
    # UI
    "streamlit>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

# SHAP explainability (has llvmlite dependency, may need manual install)
shap = [
    "shap>=0.44.0",
]

# PDF report generation (requires GTK on Windows)
pdf = [
    "weasyprint>=60.0",
]

# Optional: For LogBERT-style models (heavier deps)
ml = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
